<resources>
    <string name="app_name">My Test For Git</string>
    <string name="action_settings">Settings</string>
    <string name="name">姓名</string>
    <string name="hint_name">请输入您的姓名</string>
    <string name="def_view">展示自定义view</string>
    <string name="retrofit2_view_async">Retrofit2异步</string>
    <string name="retrofit2_view_sync">Retrofit2同步</string>
    <string name="annotation">AnnotationReplaceEnum</string>
    <string name="annotationReflect">注解反射测试</string>
    <string name="webview_test">WebView测试</string>
    <string name="js_test">JS测试</string>
    <string name="rxjava_test">RxJava测试</string>
    <string name="picasso_test">Picasso测试</string>
    <string name="picasso_loadUri">加载uri路径图片</string>
    <string name="picasso_loadnative">加载本地图片</string>
    <string name="picasso_loadTransformation">加载本地转换器图片</string>
    <string name="json_test">测试JSON</string>
    <string name="gson_test">GSON测试</string>
    <string name="fastjson_test">FASTJSON测试</string>
    <string name="jackson_test">JACKSON测试</string>
</resources>
