<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            />
        <EditText
            android:layout_width="@dimen/edit_txt"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>
    </LinearLayout>

    <Button
        android:id="@+id/show_def_view"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@android:color/transparent"
        android:text="@string/def_view"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/retrofit2_async"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@android:color/transparent"
        android:text="@string/retrofit2_view_async"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/retrofit2_sync"
        android:layout_marginTop="150dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@android:color/transparent"
        android:text="@string/retrofit2_view_sync"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/annotaition"
        android:layout_marginTop="200dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@android:color/transparent"
        android:text="@string/annotation"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/annotation_reflect"
        android:layout_marginTop="250dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@android:color/transparent"
        android:text="@string/annotationReflect"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>
